--- a/python并发编程/协程异步框架asyncio/f_jupyter_notebook.ipynb
+++ b/python并发编程/协程异步框架asyncio/f_jupyter_notebook.ipynb
@@ -30,7 +30,7 @@
     "                             say_after(2, 'world'))\n",
     "    print(l)  \n",
     "\n",
-    "    print(f\"finished at {time.strftime('%X')}\") "
+    "    print(f\"finished at {time.strftime('%X')}\")  # 总耗时2s"
    ]
   },
   {
@@ -53,6 +53,7 @@
     }
    ],
    "source": [
+    "# jupyter notebook中运行和调试异步代码\n",
     "await main()"
    ]
   }
