--- a/python并发编程/testx/test.ipynb
+++ b/python并发编程/testx/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,16 +24,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.9959232807159424"
+       "2.011848211288452"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,8 +43,8 @@
     "import asyncio\n",
     "\n",
     "\n",
-    "xx = await async_computer()\n",
-    "xx"
+    "use_time = await async_computer()\n",
+    "use_time"
    ]
   }
  ],
