--- a/python并发编程/demo/test.ipynb
+++ b/python并发编程/demo/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,26 +24,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2.011848211288452"
+       "2.016874313354492"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from utily import async_computer\n",
-    "import asyncio\n",
-    "\n",
     "\n",
     "use_time = await async_computer()\n",
+    "use_time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "21.002788066864014"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import asyncio\n",
+    "import time\n",
+    "\n",
+    "\n",
+    "async def complex():\n",
+    "    t0 = time.time()\n",
+    "    task1 = asyncio.create_task(async_computer())\n",
+    "    task2 = asyncio.create_task(async_computer())\n",
+    "\n",
+    "    _ = process_computer()\n",
+    "    _ = await task1\n",
+    "    _ = thread_computer()\n",
+    "    _ = process_computer()\n",
+    "    _ = await task2\n",
+    "    _ = thread_computer()\n",
+    "    return time.time() - t0\n",
+    "\n",
+    "use_time = await complex()\n",
     "use_time"
    ]
   }
