--- a/操作图数据库neo4j/cypher/create_node.ipynb
+++ b/操作图数据库neo4j/cypher/create_node.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -18,6 +18,7 @@
     "\n",
     "    # 创建单个节点;标签名称:moive\n",
     "    driver.execute_query(\"create(a:moive{name:'肖申克的救赎', type:'犯罪', score:9.7}) return a\", database_=\"neo4j\")\n",
+    "\n",
     "    # 创建多个标签:moive/good/USA\n",
     "    driver.execute_query(\"create(:moive:good:USA{name:'侏罗纪公园', type:'科幻', score:9.7})\", database_=\"neo4j\")\n",
     "    # 创建多个节点(逗号分隔)\n",
@@ -25,41 +26,36 @@
     "                         \"(:moive{name:'无间道', type:'犯罪', score:8.7}),\"\n",
     "                         \"(:moive{name:'大内密探零零发', type:'搞笑', score:9.4}),\"\n",
     "                         \"(:moive{name:'我和我的祖国', type:'主旋律', score:7.7})\", database_=\"neo4j\")\n",
-    "\n",
+    "    query = \"CREATE (a:movie {name: $name, type: $type, score: $score}) RETURN a\"\n",
+    "    parameters = {\n",
+    "        \"name\": \"我和我的祖国\",\n",
+    "        \"type\": \"主旋律\",\n",
+    "        \"score\": 8.7\n",
+    "    }\n",
+    "    # 参数传递\n",
+    "    driver.execute_query(query, parameters_=parameters, database_='neo4j')\n",
     "    # Shut down, closing any open connections in the pool.\n",
     "    driver.close()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "development",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
