--- a/操作分布式搜索和分析引擎Elasticsearch/索引/分词器2custom_ik.ipynb
+++ b/操作分布式搜索和分析引擎Elasticsearch/索引/分词器2custom_ik.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -59,7 +59,7 @@
     "# ik分词器:https://github.com/medcl/elasticsearch-analysis-ik\n",
     "'''\n",
     "安装:\n",
-    "./bin/elasticsearch-plugin install https://github.com/medcl/elasticsearch-analysis-ik/releases/download/v7.11.2/elasticsearch-analysis-ik-7.11.2.zip\n",
+    "./bin/elasticsearch-plugin install https://release.infinilabs.com/analysis-ik/stable/elasticsearch-analysis-ik-7.11.2.zip\n",
     "\n",
     "restart elasticsearch\n",
     "'''\n",
@@ -295,7 +295,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "development",
    "language": "python",
    "name": "python3"
   },
@@ -309,7 +309,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "3.10.12"
+   "version": "undefined.undefined.undefined"
   }
  },
  "nbformat": 4,
