--- a/操作mysql数据库/mysql.connector_/a_基本操作.ipynb
+++ b/操作mysql数据库/mysql.connector_/a_基本操作.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "id": "ea935ede",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import mysql.connector"
+    "import mysql.connector as mysql"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "7937c82d",
    "metadata": {},
    "outputs": [
@@ -26,16 +26,18 @@
     }
    ],
    "source": [
-    "cnx = mysql.connector.connect(\n",
+    "cnx = mysql.connect(\n",
     "    host='localhost',\n",
     "    port='19950',\n",
     "    user='root',\n",
     "    password='dsjk@186115!',\n",
-    "    database='amp')\n",
+    "    database='amp',\n",
+    "    charset='utf8mb4'\n",
+    "    )\n",
     "cursor = cnx.cursor()\n",
     "query = (\"SELECT id, city_name FROM ai_setting\")\n",
     "\n",
-    "cursor.execute(query)\n",
+    "cursor.execute(query)  # 增删改查\n",
     "results = cursor.fetchall()  # 数据\n",
     "column_names = [desc[0] for desc in cursor.description]  # 列名\n",
     "print(results)\n",
@@ -44,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "id": "b9fb18df",
    "metadata": {},
    "outputs": [],
