继续学习,自己的自制力实在是太弱了,明明12点很累了,还要拖到3点才睡,我是脑残吗

--- a/操作mysql数据库/mysql.connector_/b_执行多条语句.ipynb
+++ b/操作mysql数据库/mysql.connector_/b_执行多条语句.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "2be98bbe",
    "metadata": {},
    "outputs": [],
@@ -12,14 +12,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "12bad429",
    "metadata": {},
    "outputs": [],
    "source": [
     "cnx = mysql.connect(\n",
     "    host='localhost',\n",
-    "    port='19950',\n",
+    "    port=19950,\n",
     "    user='root',\n",
     "    password='dsjk@186115!',\n",
     "    database='amp',\n",
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "a1312a6c",
    "metadata": {},
    "outputs": [
@@ -99,7 +99,7 @@
        "   1)]]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "685a2bcb",
    "metadata": {},
    "outputs": [],
