--- a/操作KV数据redis/a_String.ipynb
+++ b/操作KV数据redis/a_String.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
    "id": "16104fa9",
    "metadata": {
     "ExecuteTime": {
@@ -9,14 +10,14 @@
      "start_time": "2025-07-03T09:21:08.720679Z"
     }
    },
+   "outputs": [],
    "source": [
     "import redis"
-   ],
-   "outputs": [],
-   "execution_count": 35
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
    "id": "cd5140c2",
    "metadata": {
     "ExecuteTime": {
@@ -24,11 +25,6 @@
      "start_time": "2025-07-03T09:21:08.859271Z"
     }
    },
-   "source": [
-    "r = redis.Redis(host='localhost', port=6379, decode_responses=True)\n",
-    "\n",
-    "print(r.ping())"
-   ],
    "outputs": [
     {
      "name": "stdout",
@@ -38,10 +34,15 @@
      ]
     }
    ],
-   "execution_count": 36
+   "source": [
+    "r = redis.Redis(host='localhost', port=6379, decode_responses=True)\n",
+    "\n",
+    "print(r.ping())"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
    "id": "eb89fb33",
    "metadata": {
     "ExecuteTime": {
@@ -49,11 +50,6 @@
      "start_time": "2025-07-03T09:21:08.939955Z"
     }
    },
-   "source": [
-    "print(r.get(\"china\"))\n",
-    "\n",
-    "print(r.exists(\"china\"))"
-   ],
    "outputs": [
     {
      "name": "stdout",
@@ -64,10 +60,17 @@
      ]
     }
    ],
-   "execution_count": 37
+   "source": [
+    "# Return the value at key ``name``, or None if the key doesn't exist\n",
+    "print(r.get(\"china\"))\n",
+    "\n",
+    "# Returns the number of ``names`` that exist\n",
+    "print(r.exists(\"china\"))"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
    "id": "aa47f5d6",
    "metadata": {
     "ExecuteTime": {
@@ -75,10 +78,6 @@
      "start_time": "2025-07-03T09:21:09.207504Z"
     }
    },
-   "source": [
-    "r.set('china', 'good')\n",
-    "print(r.get(\"china\"))"
-   ],
    "outputs": [
     {
      "name": "stdout",
@@ -88,10 +87,15 @@
      ]
     }
    ],
-   "execution_count": 38
+   "source": [
+    "# Set the value at key ``name`` to ``value``\n",
+    "r.set('china', 'good')\n",
+    "print(r.get(\"china\"))"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
    "id": "93d74b22",
    "metadata": {
     "ExecuteTime": {
@@ -99,11 +103,6 @@
      "start_time": "2025-07-03T09:21:09.357881Z"
     }
    },
-   "source": [
-    "print(r.get(\"china\"))\n",
-    "\n",
-    "print(r.exists(\"china\"))"
-   ],
    "outputs": [
     {
      "name": "stdout",
@@ -114,10 +113,15 @@
      ]
     }
    ],
-   "execution_count": 39
+   "source": [
+    "print(r.get(\"china\"))\n",
+    "\n",
+    "print(r.exists(\"china\"))"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
    "id": "ac393278",
    "metadata": {
     "ExecuteTime": {
@@ -125,9 +129,6 @@
      "start_time": "2025-07-03T09:21:09.507519Z"
     }
    },
-   "source": [
-    "r.delete(\"china\")"
-   ],
    "outputs": [
     {
      "data": {
@@ -135,15 +136,19 @@
        "1"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 40
+   "source": [
+    "# Delete one or more keys specified by ``names``\n",
+    "r.delete(\"china\")"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
    "id": "3b2ad566057fc663",
    "metadata": {
     "ExecuteTime": {
@@ -151,11 +156,6 @@
      "start_time": "2025-07-03T09:21:09.717633Z"
     }
    },
-   "source": [
-    "print(r.get(\"china\"))\n",
-    "\n",
-    "print(r.exists(\"china\"))"
-   ],
    "outputs": [
     {
      "name": "stdout",
@@ -166,20 +166,17 @@
      ]
     }
    ],
-   "execution_count": 41
+   "source": [
+    "print(r.get(\"china\"))\n",
+    "\n",
+    "print(r.exists(\"china\"))"
+   ]
   },
   {
    "cell_type": "code",
-   "id": "de7018b90b024622",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-07-03T09:21:09.922980Z",
-     "start_time": "2025-07-03T09:21:09.914725Z"
-    }
-   },
-   "source": [
-    "r.set('中国', '好')"
-   ],
+   "execution_count": 8,
+   "id": "872edb13",
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -187,136 +184,70 @@
        "True"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 42
+   "source": [
+    "r.set(\"中国\", 1)\n",
+    "# Set the value of key ``name`` to ``value`` if key doesn't exist\n",
+    "r.setnx(\"中国\", 2)\n",
+    "r.setnx(\"美国\", 3)"
+   ]
   },
   {
    "cell_type": "code",
-   "id": "63031dcb82220456",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-07-03T09:21:10.137727Z",
-     "start_time": "2025-07-03T09:21:10.128164Z"
-    }
-   },
-   "source": [
-    "print(r.get('中国'))"
-   ],
+   "execution_count": 9,
+   "id": "57eb007c",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "好\n"
+      "<class 'str'>\n",
+      "1\n"
      ]
     }
    ],
-   "execution_count": 43
+   "source": [
+    "print(type(r.get(\"美国\")))\n",
+    "print(r.strlen(\"美国\"))"
+   ]
   },
   {
    "cell_type": "code",
-   "id": "40bea7fcd78b12f1",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-07-03T09:21:10.367854Z",
-     "start_time": "2025-07-03T09:21:10.358137Z"
-    }
-   },
-   "source": [
-    "# r.ttl()\n",
-    "# setnx\n",
-    "# setex"
-   ],
-   "outputs": [],
-   "execution_count": 44
-  },
-  {
-   "cell_type": "code",
-   "id": "2636c51d",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-07-03T09:21:10.434316Z",
-     "start_time": "2025-07-03T09:21:10.414036Z"
-    }
-   },
-   "source": [
-    "# lpush"
-   ],
-   "outputs": [],
-   "execution_count": 45
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-07-03T09:21:10.487637Z",
-     "start_time": "2025-07-03T09:21:10.477611Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "r.lpush(\"lst\", 1, 2, 3, 4)  # rpush\n",
-    "# lpop\n",
-    "# rpop\n",
-    "# llen"
-   ],
-   "id": "f732eb255d4411ae",
+   "execution_count": 10,
+   "id": "7b3867bb",
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4"
+       "['美国', '中国']"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 46
+   "source": [
+    "# Returns a list of keys matching ``pattern``\n",
+    "r.keys()"
+   ]
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-07-03T09:21:50.161902Z",
-     "start_time": "2025-07-03T09:21:50.139841Z"
-    }
-   },
    "cell_type": "code",
-   "source": "r.lrange(\"lst\", 0, -1)",
-   "id": "16fbceb4b4b10ba8",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['4', '3', '2', '1']"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 47
-  },
-  {
+   "execution_count": 11,
+   "id": "35e3c8cb",
    "metadata": {},
-   "cell_type": "code",
    "outputs": [],
-   "execution_count": null,
-   "source": "# r.llen()",
-   "id": "baafd0c62e9c5c37"
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "# r.ltrim()  # 删除",
-   "id": "1558e28d71035252"
+   "source": [
+    "for key in r.keys():\n",
+    "    r.delete(key)"
+   ]
   }
  ],
  "metadata": {
