--- a/操作KV数据redis/set.ipynb
+++ b/操作KV数据redis/set.ipynb
@@ -2,21 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 2,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true,
     "ExecuteTime": {
      "end_time": "2025-07-03T09:24:12.278104Z",
      "start_time": "2025-07-03T09:24:12.179078Z"
-    }
+    },
+    "collapsed": true
    },
-   "source": [
-    "import redis\n",
-    "\n",
-    "r = redis.Redis(host='localhost', port=6379, decode_responses=True)\n",
-    "\n",
-    "print(r.ping())"
-   ],
    "outputs": [
     {
      "name": "stdout",
@@ -26,18 +20,37 @@
      ]
     }
    ],
-   "execution_count": 2
+   "source": [
+    "import redis\n",
+    "\n",
+    "r = redis.Redis(host='localhost', port=6379, decode_responses=True)\n",
+    "\n",
+    "print(r.ping())"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8fdb74d0752083bb",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-03T13:20:13.386359Z",
+     "start_time": "2025-07-03T13:20:13.298043Z"
+    }
+   },
+   "outputs": [],
+   "source": ""
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "7cd7b226c1d38a0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-07-03T09:25:01.718039Z",
      "start_time": "2025-07-03T09:25:01.708444Z"
     }
    },
-   "cell_type": "code",
-   "source": "r.sadd(\"aa\", \"bb\")\n",
-   "id": "7cd7b226c1d38a0",
    "outputs": [
     {
      "data": {
@@ -50,18 +63,20 @@
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 5
+   "source": [
+    "r.sadd(\"aa\", \"bb\")\n"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "197a54f2bd81ee90",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-07-03T09:25:12.212608Z",
      "start_time": "2025-07-03T09:25:12.202284Z"
     }
    },
-   "cell_type": "code",
-   "source": "r.sadd(\"aa\", \"cc\")",
-   "id": "197a54f2bd81ee90",
    "outputs": [
     {
      "data": {
@@ -74,18 +89,20 @@
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 6
+   "source": [
+    "r.sadd(\"aa\", \"cc\")"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "a8a8fd68d9d4e6f7",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-07-03T09:25:28.670483Z",
      "start_time": "2025-07-03T09:25:28.658280Z"
     }
    },
-   "cell_type": "code",
-   "source": "r.smembers(\"aa\")",
-   "id": "a8a8fd68d9d4e6f7",
    "outputs": [
     {
      "data": {
@@ -98,39 +115,49 @@
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 7
+   "source": [
+    "r.smembers(\"aa\")"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": "r.srem()",
-   "id": "bb816489647242b"
+   "id": "bb816489647242b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r.srem()"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": "r.save()",
-   "id": "e688b22af0a73ee0"
+   "id": "e688b22af0a73ee0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r.save()"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": "r.bgsave()",
-   "id": "c1eb652f22a79a80"
+   "id": "c1eb652f22a79a80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r.bgsave()"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": "r.close()",
-   "id": "ab66716ab8b8ae45"
+   "id": "ab66716ab8b8ae45",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r.close()"
+   ]
   }
  ],
  "metadata": {
