--- a/操作KV数据redis/a_String.ipynb
+++ b/操作KV数据redis/a_String.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 59,
    "id": "16104fa9",
    "metadata": {
     "ExecuteTime": {
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 60,
    "id": "cd5140c2",
    "metadata": {
     "ExecuteTime": {
@@ -37,12 +37,12 @@
    "source": [
     "r = redis.Redis(host='localhost', port=6379, decode_responses=True)\n",
     "\n",
-    "print(r.ping())"
+    "print(r.ping())  # 通用方法"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 61,
    "id": "eb89fb33",
    "metadata": {
     "ExecuteTime": {
@@ -62,15 +62,15 @@
    ],
    "source": [
     "# Return the value at key ``name``, or None if the key doesn't exist\n",
-    "print(r.get(\"china\"))\n",
+    "print(r.get(\"china\")) \n",
     "\n",
     "# Returns the number of ``names`` that exist\n",
-    "print(r.exists(\"china\"))"
+    "print(r.exists(\"china\"))  # 通用方法"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 62,
    "id": "aa47f5d6",
    "metadata": {
     "ExecuteTime": {
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 63,
    "id": "93d74b22",
    "metadata": {
     "ExecuteTime": {
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 64,
    "id": "ac393278",
    "metadata": {
     "ExecuteTime": {
@@ -131,24 +131,39 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
     }
    ],
    "source": [
     "# Delete one or more keys specified by ``names``\n",
-    "r.delete(\"china\")"
+    "print(r.delete(\"china\"))  # 通用方法"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 65,
+   "id": "cdd59262",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(r.delete(\"china\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
    "id": "3b2ad566057fc663",
    "metadata": {
     "ExecuteTime": {
@@ -174,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 67,
    "id": "872edb13",
    "metadata": {},
    "outputs": [
@@ -184,7 +199,7 @@
        "True"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,12 +208,13 @@
     "r.set(\"中国\", 1)\n",
     "# Set the value of key ``name`` to ``value`` if key doesn't exist\n",
     "r.setnx(\"中国\", 2)\n",
-    "r.setnx(\"美国\", 3)"
+    "r.setnx(\"美国\", 3)\n",
+    "r.setnx(\"日本\", -1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 68,
    "id": "57eb007c",
    "metadata": {},
    "outputs": [
@@ -207,40 +223,45 @@
      "output_type": "stream",
      "text": [
       "<class 'str'>\n",
-      "1\n"
+      "2\n"
      ]
     }
    ],
    "source": [
-    "print(type(r.get(\"美国\")))\n",
-    "print(r.strlen(\"美国\"))"
+    "print(type(r.get(\"日本\")))\n",
+    "print(r.strlen(\"日本\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 69,
    "id": "7b3867bb",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['美国', '中国']"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['日本', '美国', '中国']\n",
+      "['美国', '中国']\n"
+     ]
     }
    ],
    "source": [
     "# Returns a list of keys matching ``pattern``\n",
-    "r.keys()"
+    "print(r.keys())  # 通用方法\n",
+    "# Supported glob-style patterns:\n",
+    "# * h?llo matches hello, hallo and hxllo\n",
+    "# * h*llo matches hllo and heeeello\n",
+    "# * h[ae]llo matches hello and hallo, but not hillo\n",
+    "# * h[^e]llo matches hallo, hbllo, ... but not hello\n",
+    "# * h[a-b]llo matches hallo and hbllo\n",
+    "print(r.keys(pattern=\"*国\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 70,
    "id": "35e3c8cb",
    "metadata": {},
    "outputs": [],
