--- a/操作KV数据redis/b_List.ipynb
+++ b/操作KV数据redis/b_List.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 1,
    "id": "68d12a6c",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 2,
    "id": "9568dfc2",
    "metadata": {},
    "outputs": [
@@ -32,30 +32,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "id": "eaee7d15",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n"
+     ]
     }
    ],
    "source": [
     "# Push ``values`` onto the head of the list ``name``\n",
-    "r.lpush(\"mylist\", \"world\")\n",
-    "r.lpush(\"mylist\", \"hello\")"
+    "print(r.lpush(\"mylist\", \"world\"))\n",
+    "print(r.lpush(\"mylist\", \"hello\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 4,
    "id": "2c00d326",
    "metadata": {},
    "outputs": [
@@ -77,32 +75,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 5,
    "id": "023f1c3f",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "6"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n"
+     ]
     }
    ],
    "source": [
     "# Push ``values`` onto the tail of the list ``name``\n",
-    "r.rpush('mylist', \"dc\")\n",
-    "r.rpush('mylist', \"dmm\")\n",
-    "r.rpush('mylist', \"come\")\n",
-    "r.rpush('mylist', \"on\")"
+    "print(r.rpush('mylist', \"dc\"))\n",
+    "print(r.rpush('mylist', \"dmm\"))\n",
+    "print(r.rpush('mylist', \"come\"))\n",
+    "print(r.rpush('mylist', \"on\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 6,
    "id": "74ab86c7",
    "metadata": {},
    "outputs": [
@@ -120,29 +118,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 7,
    "id": "3f67ee74",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['hello', 'world']"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['hello', 'world']\n"
+     ]
     }
    ],
    "source": [
     "# Removes and returns the first elements of the list ``name``.\n",
-    "r.lpop(\"mylist\", count=2)"
+    "print(r.lpop(\"mylist\", count=2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 8,
    "id": "ae4f73b1",
    "metadata": {},
    "outputs": [
@@ -160,29 +155,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 9,
    "id": "0638da31",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['on']"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['on']\n"
+     ]
     }
    ],
    "source": [
     "# Removes and returns the last elements of the list ``name``.\n",
-    "r.rpop(\"mylist\", count=1)"
+    "print(r.rpop(\"mylist\", count=1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 10,
    "id": "54129a35",
    "metadata": {},
    "outputs": [
@@ -200,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 11,
    "id": "83cc953e",
    "metadata": {},
    "outputs": [],
