--- a/操作KV数据redis/b_List.ipynb
+++ b/操作KV数据redis/b_List.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "id": "68d12a6c",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "id": "9568dfc2",
    "metadata": {},
    "outputs": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "id": "eaee7d15",
    "metadata": {},
    "outputs": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "id": "2c00d326",
    "metadata": {},
    "outputs": [
@@ -75,7 +75,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
+   "id": "2b1ff086",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "world\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Return the length of the list ``name``\n",
+    "print(r.llen(\"mylist\"))\n",
+    "\n",
+    "# Return the item from list ``name`` at position ``index``\n",
+    "# Negative indexes are supported and will return an item at the end of the list\n",
+    "print(r.lindex(\"mylist\", index=1))\n",
+    "print(r.lindex(\"mylist\", index=2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "id": "023f1c3f",
    "metadata": {},
    "outputs": [
@@ -100,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
    "id": "74ab86c7",
    "metadata": {},
    "outputs": [
@@ -118,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
    "id": "3f67ee74",
    "metadata": {},
    "outputs": [
@@ -137,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 39,
    "id": "ae4f73b1",
    "metadata": {},
    "outputs": [
@@ -155,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 40,
    "id": "0638da31",
    "metadata": {},
    "outputs": [
@@ -174,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 41,
    "id": "54129a35",
    "metadata": {},
    "outputs": [
@@ -192,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 42,
    "id": "83cc953e",
    "metadata": {},
    "outputs": [],
