--- a/操作KV数据redis/c_Set.ipynb
+++ b/操作KV数据redis/c_Set.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "1cb392f0",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "d7651843",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "172396aa",
    "metadata": {},
    "outputs": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "40a41ed0",
    "metadata": {},
    "outputs": [
@@ -55,7 +55,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Hello', 'dmm', 'World', 'dc'}\n"
+      "{'dc', 'Hello', 'World', 'dmm'}\n"
      ]
     }
    ],
@@ -66,7 +66,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "id": "0da26f87",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "1\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Return the number of elements in set ``name``\n",
+    "print(r.scard(\"myset\"))\n",
+    "\n",
+    "# Return whether ``value`` is a member of set ``name``:\n",
+    "# - 1 if the value is a member of the set.\n",
+    "# - 0 if the value is not a member of the set or if key does not exist.\n",
+    "print(r.sismember(\"myset\", \"dc\"))\n",
+    "print(r.sismember(\"myset\", \"DC\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "f839d125",
    "metadata": {},
    "outputs": [
@@ -86,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "b9f1728f",
    "metadata": {},
    "outputs": [
@@ -104,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "id": "799de2fa",
    "metadata": {},
    "outputs": [],
