--- a/操作KV数据redis/a_String.ipynb
+++ b/操作KV数据redis/a_String.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 21,
    "id": "16104fa9",
    "metadata": {
     "ExecuteTime": {
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "id": "cd5140c2",
    "metadata": {
     "ExecuteTime": {
@@ -35,14 +35,18 @@
     }
    ],
    "source": [
-    "r = redis.Redis(host='localhost', port=6379, decode_responses=True)\n",
+    "r = redis.Redis(host='localhost',  # 默认:localhost\"\n",
+    "                port=6379,  # 默认:6378 \n",
+    "                password=\"qwer123456\",  # 默认:None\n",
+    "                db=0,  # 默认:0\n",
+    "                decode_responses=True)\n",
     "\n",
     "print(r.ping())  # 通用方法"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 23,
    "id": "eb89fb33",
    "metadata": {
     "ExecuteTime": {
@@ -70,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 24,
    "id": "aa47f5d6",
    "metadata": {
     "ExecuteTime": {
@@ -95,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 25,
    "id": "93d74b22",
    "metadata": {
     "ExecuteTime": {
@@ -121,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 26,
    "id": "ac393278",
    "metadata": {
     "ExecuteTime": {
@@ -145,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 27,
    "id": "cdd59262",
    "metadata": {},
    "outputs": [
@@ -163,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 28,
    "id": "3b2ad566057fc663",
    "metadata": {
     "ExecuteTime": {
@@ -189,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 29,
    "id": "872edb13",
    "metadata": {},
    "outputs": [
@@ -199,7 +203,7 @@
        "True"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 30,
    "id": "57eb007c",
    "metadata": {},
    "outputs": [
@@ -234,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 31,
    "id": "7b3867bb",
    "metadata": {},
    "outputs": [
@@ -242,7 +246,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['日本', '美国', '中国']\n",
+      "['美国', '日本', '中国']\n",
       "['美国', '中国']\n"
      ]
     }
@@ -261,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 32,
    "id": "35e3c8cb",
    "metadata": {},
    "outputs": [],
