--- a/操作KV数据redis/d_sortedSet.ipynb
+++ b/操作KV数据redis/d_sortedSet.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 1,
    "id": "36972bf9",
    "metadata": {},
    "outputs": [],
@@ -12,17 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "id": "bd02b30c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "r = redis.Redis(host='localhost', port=6379, decode_responses=True)"
+    "r = redis.Redis(host='localhost', port=6379, password=\"qwer123456\", decode_responses=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 3,
    "id": "e807a1a8",
    "metadata": {},
    "outputs": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "id": "a092b906",
    "metadata": {},
    "outputs": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 5,
    "id": "1bbf7e64",
    "metadata": {},
    "outputs": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "0ab10713",
    "metadata": {},
    "outputs": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 7,
    "id": "3e8ee0d6",
    "metadata": {},
    "outputs": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 8,
    "id": "eab9b906",
    "metadata": {},
    "outputs": [],
