no time no time 是时候离开了

--- a/操作KV数据redis/a_String.ipynb
+++ b/操作KV数据redis/a_String.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "16104fa9",
    "metadata": {
     "ExecuteTime": {
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "cd5140c2",
    "metadata": {
     "ExecuteTime": {
@@ -35,6 +35,7 @@
     }
    ],
    "source": [
+    "# 通用客户端\n",
     "r = redis.Redis(host='localhost',  # 默认:localhost\"\n",
     "                port=6379,  # 默认:6378 \n",
     "                password=\"qwer123456\",  # 默认:None\n",
@@ -46,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "eb89fb33",
    "metadata": {
     "ExecuteTime": {
@@ -74,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "aa47f5d6",
    "metadata": {
     "ExecuteTime": {
@@ -99,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "id": "93d74b22",
    "metadata": {
     "ExecuteTime": {
@@ -125,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "id": "ac393278",
    "metadata": {
     "ExecuteTime": {
@@ -149,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "id": "cdd59262",
    "metadata": {},
    "outputs": [
@@ -167,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "id": "3b2ad566057fc663",
    "metadata": {
     "ExecuteTime": {
@@ -193,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "id": "872edb13",
    "metadata": {},
    "outputs": [
@@ -203,7 +204,7 @@
        "True"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "id": "57eb007c",
    "metadata": {},
    "outputs": [
@@ -238,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "id": "7b3867bb",
    "metadata": {},
    "outputs": [
@@ -265,13 +266,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "id": "35e3c8cb",
    "metadata": {},
    "outputs": [],
    "source": [
     "for key in r.keys():\n",
     "    r.delete(key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "349a973e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r.close()"
    ]
   }
  ],
