--- a/操作KV数据redis/b_List.ipynb
+++ b/操作KV数据redis/b_List.ipynb
@@ -226,6 +226,16 @@
     "for key in r.keys():\n",
     "    r.delete(key)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "9af8d11b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r.close()"
+   ]
   }
  ],
  "metadata": {
