--- a/操作KV数据redis/c_Set.ipynb
+++ b/操作KV数据redis/c_Set.ipynb
@@ -55,7 +55,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'dmm', 'dc', 'World', 'Hello'}\n"
+      "{'dc', 'Hello', 'dmm', 'World'}\n"
      ]
     }
    ],
@@ -138,6 +138,16 @@
    "source": [
     "for key in r.keys():\n",
     "    r.delete(key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "4dd02420",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r.close()"
    ]
   }
  ],
