--- a/操作KV数据redis/d_sortedSet.ipynb
+++ b/操作KV数据redis/d_sortedSet.ipynb
@@ -139,6 +139,16 @@
     "for key in r.keys():\n",
     "    r.delete(key)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "b60b90b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r.close()"
+   ]
   }
  ],
  "metadata": {
