--- a/操作KV数据redis/e_Hash.ipynb
+++ b/操作KV数据redis/e_Hash.ipynb
@@ -119,6 +119,16 @@
     "for key in r.keys():\n",
     "    r.delete(key)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "c8044852",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r.close()"
+   ]
   }
  ],
  "metadata": {
