--- a/操作KV数据redis/e_Hash.ipynb
+++ b/操作KV数据redis/e_Hash.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "id": "0a50b0f3",
    "metadata": {},
    "outputs": [],
@@ -12,17 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "id": "124830f4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "r = redis.Redis(host='localhost', port=6379, password=\"qwer123456\", decode_responses=True)"
+    "r = redis.Redis(host='localhost', port=6379, password=None, decode_responses=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "id": "2ffa27ec",
    "metadata": {},
    "outputs": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "id": "835d8911",
    "metadata": {},
    "outputs": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "da3a2583",
    "metadata": {},
    "outputs": [
@@ -106,12 +106,13 @@
     "print(r.hdel(\"myhash\", \"field1\", \"field2\"))\n",
     "print(r.hdel(\"myhash\", \"field3\"))\n",
     "\n",
+    "# Return a Python dict of the hash's name/value pairs\n",
     "print(r.hgetall(\"myhash\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "id": "12ffdb87",
    "metadata": {},
    "outputs": [],
@@ -122,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "id": "c8044852",
    "metadata": {},
    "outputs": [],
