--- a/操作KV数据redis/b_List.ipynb
+++ b/操作KV数据redis/b_List.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "import redis\n",
     "\n",
-    "r = redis.Redis(host='localhost', port=6379, password=\"qwer123456\", decode_responses=True)"
+    "r = redis.Redis(host='localhost', port=6379, password=None, decode_responses=True)"
    ]
   },
   {
@@ -221,10 +221,20 @@
    "execution_count": 12,
    "id": "83cc953e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "for key in r.keys():\n",
-    "    r.delete(key)"
+    "r.flushdb(asynchronous=True)"
    ]
   },
   {
