--- a/操作KV数据redis/c_Set.ipynb
+++ b/操作KV数据redis/c_Set.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "r = redis.Redis(host='localhost', port=6379, password=\"qwer123456\", decode_responses=True)"
+    "r = redis.Redis(host='localhost', port=6379, password=None, decode_responses=True)"
    ]
   },
   {
@@ -55,7 +55,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'dc', 'Hello', 'dmm', 'World'}\n"
+      "{'dc', 'Hello', 'World', 'dmm'}\n"
      ]
     }
    ],
@@ -134,10 +134,20 @@
    "execution_count": 8,
    "id": "799de2fa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "for key in r.keys():\n",
-    "    r.delete(key)"
+    "r.flushdb(asynchronous=True)"
    ]
   },
   {
