--- a/操作KV数据redis/a_String.ipynb
+++ b/操作KV数据redis/a_String.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 36,
    "id": "16104fa9",
    "metadata": {
     "ExecuteTime": {
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "id": "cd5140c2",
    "metadata": {
     "ExecuteTime": {
@@ -38,7 +38,7 @@
     "# 通用客户端\n",
     "r = redis.Redis(host='localhost',  # 默认:localhost\"\n",
     "                port=6379,  # 默认:6378 \n",
-    "                password=\"qwer123456\",  # 默认:None\n",
+    "                password=None,  # 默认:None\n",
     "                db=0,  # 默认:0\n",
     "                decode_responses=True)\n",
     "\n",
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 38,
    "id": "eb89fb33",
    "metadata": {
     "ExecuteTime": {
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 39,
    "id": "aa47f5d6",
    "metadata": {
     "ExecuteTime": {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 40,
    "id": "93d74b22",
    "metadata": {
     "ExecuteTime": {
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 41,
    "id": "ac393278",
    "metadata": {
     "ExecuteTime": {
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 42,
    "id": "cdd59262",
    "metadata": {},
    "outputs": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 43,
    "id": "3b2ad566057fc663",
    "metadata": {
     "ExecuteTime": {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 44,
    "id": "872edb13",
    "metadata": {},
    "outputs": [
@@ -204,7 +204,7 @@
        "True"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 45,
    "id": "57eb007c",
    "metadata": {},
    "outputs": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 46,
    "id": "7b3867bb",
    "metadata": {},
    "outputs": [
@@ -247,7 +247,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['日本', '美国', '中国']\n",
+      "['美国', '日本', '中国']\n",
       "['美国', '中国']\n"
      ]
     }
@@ -266,18 +266,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "35e3c8cb",
+   "execution_count": 47,
+   "id": "891bf87b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "for key in r.keys():\n",
-    "    r.delete(key)"
+    "# Delete all keys in the current database.\n",
+    "# ``asynchronous`` indicates whether the operation is executed asynchronously by the server.\n",
+    "r.flushdb(asynchronous=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 48,
    "id": "349a973e",
    "metadata": {},
    "outputs": [],
