--- a/操作KV数据redis/d_sortedSet.ipynb
+++ b/操作KV数据redis/d_sortedSet.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "r = redis.Redis(host='localhost', port=6379, password=\"qwer123456\", decode_responses=True)"
+    "r = redis.Redis(host='localhost', port=6379, password=None, decode_responses=True)"
    ]
   },
   {
@@ -134,10 +134,20 @@
    "execution_count": 8,
    "id": "eab9b906",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "for key in r.keys():\n",
-    "    r.delete(key)"
+    "r.flushdb(asynchronous=True)"
    ]
   },
   {
